src/styles.css
/* ... */
/* https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp */
.skills::-webkit-scrollbar { 
    display: none;  /* Safari, Chrome & Opera */
}

.skills-shadow
{
    position: relative;
}

.skills-shadow::before, .skills-shadow::after
{
    content: "";
    position: absolute;
    width: 75px;
    top: 0;
    bottom: 0;
    pointer-events: none;
}

.skills-shadow::before {
    background: linear-gradient(90deg, var(--shadow) 0%, transparent 100%);
    left: 0;
}

.skills-shadow::after {
    background: linear-gradient(90deg, transparent 0%, var(--shadow) 100%);
    right: 0;
}

.skills-shadow:hover::before, .skills-shadow:hover::after
{
    display: flex;
    align-items: center;
    font-size: 50px;
    color: var(--accent-transparent);
}

.skills-shadow:hover::before
{
    content: "◀";
    padding-left: 5px;  
    justify-content: flex-start; 
}

.skills-shadow:hover::after
{
    content: "▶";
    padding-right: 5px;
    justify-content: flex-end; 
}

.skill
{
    display: flex;
    flex-flow: column nowrap;
    margin: 0 auto;
}

.skill div
{
    max-height: 150px;
    min-height: 150px;
    min-width: 150px;
    max-width: 150px;
}

.expertise
{
    width: 100%;
}

.expertise .skills
{
    justify-content: space-around;
    flex-wrap: wrap;
}

.expertise .skills::before, .expertise .skills::after
{
    background: none;
    content:none;
}

.expertise .skill
{
    max-height: 300px;
    min-height: 300px;
    min-width: 300px;
    max-width: 300px;
}

.skill img
{
    height: 100%;
    width: 100%;
    object-fit: contain;
}

.timeline-container
{
    width: 100%;
    box-shadow: 0 5px 20px var(--heavy-shadow);
    border-radius: 10px;
    overflow: hidden;
}

.experience-container
{
    width: 100%;
}

.dropdown-button
{
    display:flex;
    justify-content: space-between;
    border: 1px solid var(--accent-secondary);
    background-color: var(--accent);
    color: white;
    font-size: 20px;
    padding:10px 15px;
    min-width: 100%;
}

.dropdown-button::after { content: "▼"; }
.dropdown-button.dropped::after { content: "▲"; }

.dropdown-button:hover { background-color: var(--accent-secondary); }
.dropdown-button:active { background-color: var(--btn-active-back); color: var(--btn-active-front); border-color: var(--btn-active-front); }
.dropdown-button:focus { outline: 0; }

.experiences
{
    /*display: none;*/
    transition: height ease 0.5s;
    padding: 0;
    overflow: hidden;
    position: relative;
    z-index: 0;
}

.experiences::before
{
    content: "";
    position: absolute;
    width: 20px;
    background-color: var(--accent-transparent);
    z-index: -1;
    left: 60px;
    top: 0;
    bottom: 0;
}

.experiences ul
{
    padding: 0;
    margin:0;
}

.exp-card
{
    display: flex;
    align-items: stretch;
    margin: 20px 0;
    padding: 0 20px;
}

.exp-card::before
{
    content: "";
    background-color: var(--section-back);
    border: 1em solid var(--accent);
    border-radius: 50%;
    height: calc(80px - 2em);
    width: calc(80px - 2em);
    min-width: calc(80px - 2em);
    margin: 10px;
}

.exp-card:hover::before { background-color: var(--accent); border-color: var(--accent-secondary); }

.exp-title
{
    margin:0;
}

.exp-desc
{
    display: flex;
    flex-direction: column;
    text-align: left;
    flex-grow: 1;
}

.exp-desc div:last-child
{
    flex-grow: 1;
}

.exp-desc small
{
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.exp-logo
{
    height:100px;
    width: auto;
    margin:0 10px;
    border-radius: 50%;
    box-shadow: 0px 0px 10px 0px var(--heavy-shadow);
}

.project-card
{
    width: 280px;
    height: 480px;
    box-shadow: 5px 5px 20px var(--heavy-shadow);
    border-radius: 10px;
    margin: 10px;
    padding: 10px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.project-card div
{
    display: flex;
    flex-direction: column;
    min-height: 0; /* https://stackoverflow.com/q/36247140/3597276 */
}

.project-container
{
    display:flex;
    justify-content: space-around;
    flex-wrap: wrap;
}

.project-image
{
    margin-top: 10px;
    width: 250px;
    box-shadow: 0px 0px 10px 0px var(--heavy-shadow);
    border-radius: 125px;
    align-self: center;
}

.project-desc
{
    min-height: 0px;
    overflow-y: auto;
    flex-shrink: 1;
}

.subtext
{
    font-size: 15px;
    font-weight: 300;
}

hr
{
    margin-left: 20px;
    margin-right: 20px;
}

.project-link
{
    text-decoration:none;
    color: var(--accent-secondary);
}

.hamburger
{
    display: none;
}

.hamburger:focus
{
    outline: 0;
}

form
{
    margin-top: 30px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

input, textarea
{
    font-family: Arial, Helvetica, sans-serif;

    display: block;
    width: 100%;
    border-radius: 10px;
    padding:10px;
    border:0;
    font-size:20px;
    font-weight: 300;
    margin-bottom: 10px;
    resize: vertical;
}

label
{
    align-self: flex-start;
}

@keyframes spin
{
    from { transform: rotate(-90deg); }
    to { transform: rotate(0deg); }
}

@-moz-keyframes spin
{
    from { -moz-transform: rotate(-90deg); }
    to { -moz-transform: rotate(0deg); }
}
/* ... */

